--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@googlemaps/js-api-loader": "^1.14.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "google-map-react": "^2.1.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
